[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "document-ocr-extractor"
version = "1.0.0"
description = "Scanned document OCR structure parser and transactional receipt field extractor using LLMs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
